--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -17,6 +17,13 @@
   box-sizing: border-box;
 }
 
+.main {
+  flex: 2;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+
 html {
   font-size: 20px;
 }
@@ -30,11 +37,44 @@ body {
   background-color: var(--jet);
 }
 
+.link {
+  text-decoration: none;
+}
+
 /* navbar */
+
+.header {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  height: 5rem;
+  background-color: var(--orange-web);
+}
+
 .navbar-container {
+  width: 100%;
+  height: 3rem;
+  justify-content: space-around;
 }
 
 .nav-item {
+  padding: 5px;
+  color: var(--white);
+  font-size: 1.6rem;
+  border: 3px solid var(--white);
+  border-radius: 5px;
+}
+
+.nav-item:hover {
+  background-color: var(--jet);
+  border: 3px solid var(--jet);
+  color: var(--white);
+}
+
+.box-row {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
 }
 
 /* quiz container style */
@@ -45,7 +85,7 @@ body {
   display: flex;
   justify-content: center;
   align-items: center;
-  height: 100vh;
+  height: 80vh;
 }
 
 .quiz-box {
