--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -116,14 +116,15 @@ body {
 
 h1 {
   font-size: 1.8rem;
-  padding-bottom: 1rem;
+  padding-top: 1rem;
+  padding-bottom: 0.5rem;
 }
 
 p {
   font-size: 1rem;
 }
 
-/* quiz container style */
+/* quiz container style & .start-section */
 
 .container,
 .start-section {
@@ -136,11 +137,12 @@ p {
   height: 80vh;
 }
 
-.quiz-box {
-  width: 900px;
-  margin: 0 auto;
-  background-color: var(--gainsboro);
-  padding: 1rem 3rem 3rem 3rem;
+.quiz-box,
+.start-section {
+  width: 100%;
+  height: 300px;
+  margin: auto;
+  padding: auto;
   border: 5px solid var(--orange-web);
   border-radius: 5px;
 }
