--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -38,12 +38,6 @@ a {
 body {
   font-family: "Mulish", sans-serif;
   background-color: var(--jet);
-  height: 100%;
-  margin: 0;
-  padding: 0;
-  display: flex;
-  flex-direction: column;
-  min-height: 100vh;
 }
 
 .link {
@@ -51,7 +45,7 @@ body {
 }
 
 .wrapper {
-  margin: 12rem;
+  margin: 10rem;
   padding: 3rem;
   display: flex;
   flex-direction: column;
@@ -70,7 +64,7 @@ body {
   display: flex;
   flex-direction: column;
   justify-content: center;
-  height: 5rem;
+  height: 3rem;
   background-color: var(--orange-web);
 }
 
@@ -83,7 +77,7 @@ body {
 .nav-item {
   padding: 5px;
   color: var(--white);
-  font-size: 1.6rem;
+  font-size: 1.2rem;
   border: 3px solid var(--white);
   border-radius: 5px;
 }
@@ -99,6 +93,17 @@ body {
 .start-section {
   color: var(--white);
   font-size: 1.2rem;
+  max-width: 900px;
+  margin: 0 auto;
+  padding: 0 2rem;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 80vh;
+  width: 100%;
+  height: 300px;
+  border: 5px solid var(--orange-web);
+  border-radius: 5px;
 }
 
 .startbtn {
@@ -126,35 +131,33 @@ p {
 
 /* quiz container style & .start-section */
 
-.container,
-.start-section {
-  max-width: 900px;
+.question-container {
+  width: 800px;
   margin: 0 auto;
   padding: 0 2rem;
   display: flex;
   justify-content: center;
   align-items: center;
-  height: 80vh;
+  height: 100vh;
 }
 
-.quiz-box,
-.start-section {
-  width: 100%;
-  height: 300px;
-  margin: auto;
-  padding: auto;
-  border: 5px solid var(--orange-web);
+.quiz-box {
+  width: 800px;
+  margin: 0 auto;
+  background-color: var(--gainsboro);
+  padding: 1rem 2rem 1rem 2rem;
+  border: 3px solid var(--orange-web);
   border-radius: 5px;
 }
 
 .quiz-box h2 {
   background-color: var(--white);
-  font-size: 2.5rem;
+  font-size: 2rem;
   text-align: center;
   color: var(--ming);
   padding: 1rem 0;
   width: 100%;
-  margin-bottom: 2rem;
+  margin-bottom: 1rem;
   border-radius: 3px;
 }
 
@@ -165,7 +168,7 @@ p {
 
 .quiz-header #question-progress {
   color: var(--indigo-dye);
-  font-size: 1.5rem;
+  font-size: 1rem;
   font-weight: 500;
   padding: 5px 0 0;
   margin: 5px;
@@ -174,7 +177,7 @@ p {
 .quiz-header #timer {
   background-color: var(--indigo-dye);
   color: var(--white);
-  font-size: 1.5rem;
+  font-size: 1rem;
   font-weight: 500;
   padding: 5px;
   margin: 5px;
@@ -182,10 +185,10 @@ p {
 }
 
 .quiz-box #question {
-  font-size: 1.8rem;
+  font-size: 1.2rem;
   font-weight: 500;
   color: var(--jet);
-  margin: 5px;
+  margin: 1rem 0;
 }
 
 .btn {
@@ -198,7 +201,7 @@ p {
   border: 3px solid var(--orange-web);
   border-radius: 5px;
   margin: 3px 0;
-  padding: 0.5rem;
+  padding: 0.2rem;
   outline: none;
   cursor: pointer;
 }
